--- a/views/post.ejs
+++ b/views/post.ejs
@@ -22,7 +22,7 @@
 			<br>
 		</div>
 	</section>
-	<form action="/responder" method="post" name="answer_post">
+	<form action="/answer" method="post" name="answer_post">
 		<div class="pt-4 flex flex-col justify-center align-middle items-center">
 			<div>
 				<p>Publish an Answer to the Post?</p>
