--- a/views/login.ejs
+++ b/views/login.ejs
@@ -42,8 +42,8 @@
             </div>
         </div>
     </div>
-    <h1 class="texto-white">Usuario: <%= session.username %></h1>
-    <h1 class="texto-white">ID Usuario: <%= session.id_users %></h1>
+    <h1 class="texto-white">Usuario: <%= result.session.username %></h1>
+    <h1 class="texto-white">ID Usuario: <%= result.session.id_users %></h1>
 
     <script>
         function toggleText() {
