--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>prueba de jquery</title>
+	<title>Forum</title>
 	<link rel="stylesheet" type="text/css" href="js/jquery1.js">
 	<script type="text/javascript" src="js/jquery.js"></script>
 	<link rel="stylesheet" href="css/style.css">
