--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
 
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://kit.fontawesome.com/ca713a058f.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Home</title>
 </head>
 <body>
   <%- include('./nav.ejs') %>
