--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -29,13 +29,10 @@
   md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] 
   transition-all ease-in duration-500"> 
     <li class="mx-4 my-6 md:my-0">
-      <a href="#" class="text-xl">Home</a>
+      <a href="/home" class="text-xl">Home</a>
     </li>
     <li class="mx-4 my-6 md:my-0">
-      <a href="#" class="text-xl">Genres</a>
-    </li>
-    <li class="mx-4 my-6 md:my-0">
-      <a href="#" class="text-xl">Forum</a>
+      <a href="/genres" class="text-xl">Forum</a>
     </li>
     <li class="mx-4 my-6 md:my-0">
       <a href="/about" class="text-xl">About</a>
