--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,14 +14,15 @@
 <body>
   <%- include('./nav.ejs') %>
   <div class="container-body relative z-10 flex flex-col">
-    <div>
+    <div class="flex flex-col w-full justify-center items-center">
       <p class="texto-white">Bienvenida</p>
     </div>
     <div>
       Imagen de bienvenida o algo asi?
     </div>
-    <div class="fondo-black w-full">
-      <p class="texto-white">Introduccion al sitio</p> 
+    <div class="fondo-black flex flex-col w-full justify-center items-center my-2">
+      <p class="texto-white">Introduccion al sitio titulo</p>
+      <p class="texto-white">Introduccion al sitio content</p> 
     </div>
     <div>
       Titulo de Recomendaciones
