--- a/public/css/style.css
+++ b/public/css/style.css
@@ -52,6 +52,21 @@ body{
 
 /*ESTILOS DEL LOGIN*/
 
+
+.tabcontent {
+	-webkit-animation: fadeEffect 1s;
+	animation: fadeEffect 1s;
+  }
+  
+  @-webkit-keyframes fadeEffect {
+	from {opacity: 0;}
+	to {opacity: 1;}
+  }
+  
+  @keyframes fadeEffect {
+	from {opacity: 0;}
+	to {opacity: 1;}
+  }
 /*ESTILOS DE GENEROS*/
 .flex-container{
 	border: 1px solid black;
@@ -91,4 +106,3 @@ div#agregar{
 	align-items: center;
 	text-align: center;
 }
-
