--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div class="flex justify-center pb-2 mt-4">
-                        <input type="submit" value="Sign In" class="text-xl bg-teal-300 w-24 h-9 rounded-md cursor-pointer">
+                        <input type="submit" value="Sign In" class="text-xl fondo-red w-24 h-9 rounded-md cursor-pointer">
                         </div>
                     </form>
                 </div>
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="flex justify-center pb-2 mt-4">
-                            <input type="submit" value="Sign Up" class="text-xl bg-red-100 w-24 h-9 rounded-md cursor-pointer">
+                            <input type="submit" value="Sign Up" class="text-xl fondo-red w-24 h-9 rounded-md cursor-pointer">
                         </div>
                     </form>
                 </div>
