--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,10 +13,10 @@
 <body>
     <%- include('./nav.ejs') %>
     <div class="loginBackground flex flex-row justify-center items-center">
-        <div class="loginContainer flex flex-col w-64 h-80 m-7 fondo-gray">
-            <div class="tab flex flex-row items-center justify-center w-full overflow-hidden">
-                <button class="tablinks text-3xl m-2 mt-3 w-3/5 cursor-pointer transition duration-75" onclick="toggleText(event, 'signIn')">Sign In</button>
-                <button class="tablinks text-3xl m-2 mt-3 w-3/5 cursor-pointer transition duration-75"  onclick="toggleText(event, 'signUp')">Sign Up</button>
+        <div class="loginContainer flex flex-col w-64 h-80 m-7 fondo-grey">
+            <div class="tab flex flex-row w-full overflow-hidden my-3 p-2 fondo-white rounded-md divide-x-2 divide-gray-700">
+                <button class="tablinks text-3xl w-3/5 cursor-pointer transition duration-700" onclick="toggleText(event, 'signIn')">Sign In</button>
+                <button class="tablinks text-3xl w-3/5 cursor-pointer transition duration-700"  onclick="toggleText(event, 'signUp')">Sign Up</button>
             </div>
             <div>
                 <div class="tabcontent hidden " id="signIn">
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                         <div class="flex justify-center pb-2 mt-4">
-                        <input type="submit" value="Sign In" class="text-xl fondo-red w-24 h-9 rounded-md cursor-pointer">
+                        <input type="submit" value="Sign In" class="text-xl fondo-red texto-white w-24 h-9 rounded-md cursor-pointer hover-white hover-red transition duration-700">
                         </div>
                     </form>
                 </div>
@@ -42,7 +42,7 @@
                             </div>
                         </div>
                         <div class="flex justify-center pb-2 mt-4">
-                            <input type="submit" value="Sign Up" class="text-xl fondo-red w-24 h-9 rounded-md cursor-pointer">
+                            <input type="submit" value="Sign Up" class="text-xl fondo-red texto-white w-24 h-9 rounded-md cursor-pointer hover-white hover-red transition duration-700">
                         </div>
                     </form>
                 </div>
