--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -11,7 +11,7 @@
 
 </head>
 
-<nav class="shadow relative flex md:items-center justify-between ">
+<nav class="shadow relative flex md:items-center justify-between fondo-black">
   <div class="p-10 fondo-black shadow relative z-30 flex-1">
     <div class="texto-white flex justify-between items-center ">
       <span class=" text-2xl cursor-pointer z-30">
@@ -24,17 +24,17 @@
     </div>
   </div>
 
-  <ul class="texto-white z-20 md:flex md:items-center 
+  <ul class="texto-white z-20 md:flex md:items-center
   md:relative absolute fondo-black w-full left-0 md:w-auto
-  md:py-0 py-4 md:pl-0 pl-7 md:opacity-100 opacity-0 top-[-400px] 
+  md:py-0 py-4 md:pl-0 pl-7 top-[-400px] md:top-[0]
   transition-all ease-in duration-500"> 
-    <li class="mx-4 my-6 md:my-0">
+    <li class="mx-4 my-6 md:my-0 md:mx-0">
       <a href="/home" class="text-xl">Home</a>
     </li>
-    <li class="mx-4 my-6 md:my-0">
+    <li class="mx-4 my-6 md:my-0 md:mx-0">
       <a href="/genres" class="text-xl">Forum</a>
     </li>
-    <li class="mx-4 my-6 md:my-0">
+    <li class="mx-4 my-6 md:my-0 md:mx-0">
       <a href="/about" class="text-xl">About</a>
     </li>
     <li class="inline-block mx-4">
@@ -47,7 +47,6 @@
             <%}%>
     </li>
   </ul>
-
 </nav>
 
 <script>
