--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,11 @@ body{
 	from {opacity: 0;}
 	to {opacity: 1;}
   }
+/*ESTILOS DE ADD POST*/
+.buttonPost{
+	pointer-events: none;
+	opacity: 0.50;
+}  
 /*ESTILOS DE GENEROS*/
 .flex-container{
 	border: 1px solid black;
