--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -12,7 +12,7 @@
 	
 </head>
 <body>
-
+	<%- include('./nav.ejs') %>
 	<h1 id="titulo-gen" class=".texto-white">generos disponibles</h1>
 	<section class="flex-container"> 
 		<%for (var i = 0 ; i < result.genre.length; i++) { %>
@@ -60,6 +60,6 @@
 		<% } %>
 	</section>
 	
-
+	<%- include('./footer.html') %>
 </body>
 </html>
