--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -52,13 +52,13 @@
 			</table>
 		</form>
 	</div>
-	<!-- borrar mas tarde , prueba de escypir valores de la base de datos aqui
+	<!-- borrar mas tarde , prueba de escypir valores de la base de datos aqui , esto no afecta-->
 	<section class="flex flex-col"> 
 		<%for (var i = 0 ; i < result.post.length; i++) { %>
 				<a href="/post/<%=result.post[i].id_posts%>/"><%=result.post[i].title%></a>
 				
 		<% } %>
-	</section>-->
+	</section>
 	
 	<%- include('./footer.html') %>
 </body>
