--- a/views/showgen.ejs
+++ b/views/showgen.ejs
@@ -12,14 +12,11 @@
 	
 </head>
 <body>
-
-	<h1 id="titulo-gen" class=".texto-white">libros del genero <%=result.genre.name%></h1>
+	<h1 id="titulo-gen" class=".texto-white">libros del genero <%=result.genres[0].name%></h1>
 	<section class="flex-container"> 
-		<%for (var i = 0 ; i < result.post.length; i++) { %>
+		<%for (var i = 0 ; i < result.posts.length; i++) { %>
 			<div class="caja">
-				<a href="/post/<%=result.post[i].id_posts%>/"><%=result.post[i].title%></a>
-				
-				
+				<a href="/post/<%=result.posts[i].id_posts%>/"><%=result.posts[i].title%></a>	
 			</div>
 		<% } %>
 	</section>
