Genres update one

--- a/views/addPost.ejs
+++ b/views/addPost.ejs
@@ -39,8 +39,12 @@
                     <p class="texto-white">Character Limit: 0/2000</p>
                     <textarea name="content_post" id="content_post" cols="30" rows="8" maxlength="2000"></textarea>
                 </div>
+                <div class="flex flex-col justify-center align-middle w-full  mt-3">
+                    <p class="texto-white">Add a book cover image(link):</p>
+                    <input type="text" name="image" id="image">
+                </div>
                 <div class="border-2 rounded-md mt-1 fondo-red texto-white">
-                    <input type="submit" name="Enviar" value="Submit" tabindex="-1" class="buttonPost cursor-pointer">
+                    <input type="submit" name="Enviar" value="Submit" tabindex="-1" class="cursor-pointer">
                 </div>
             </div>
 		</form>
