--- a/views/footer.html
+++ b/views/footer.html
@@ -21,18 +21,18 @@
       <span class="text-xl mt-3">
         Check our repository and social media!
       </span>
-      <span class="text-3xl texto-red">
-        <i class="fa-brands fa-square-twitter"></i>
-        <i class="fa-brands fa-square-github"></i>
+      <span class="text-4xl texto-red">
+        <a href="https://github.com/laponte16"><i class="fa-brands fa-square-github" ></i></a>
+        <a href="https://twitter.com/ThunderbitCode"><i class="fa-brands fa-square-twitter" ></i></a>
+        <a href="https://www.linkedin.com/company/thunderbitcode/?viewAsMember=true"><i class="fa-brands fa-linkedin"></i></a>
       </span>
-
-      <div class="fondo-gray rounded-md mt-3 flex justify-center"> 
-        <span class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
-          Thunderbit Fiverr
-          <img class="object-scale-down h-16 w-16" src="/images/fiverr.png">
-        </span>
-      </div>
       
+    </div>
+    <div class=""> 
+      <span class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
+        Thunderbit Fiverr
+        <a href="https://es.fiverr.com/thunderbitcode?up_rollout=true"><img class="object-scale-down h-16 w-16" src="/images/fiverr.png"></a>
+      </span>
     </div>
   </footer>
   
