--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -25,12 +25,12 @@
 	<section class="flex flex-col"> 
 		<% var color = 0;
 		for (var i = 0 ; i < result.post.length; i++) { %>
-			<div class="flex flex-row w-full h-36 border-y-2
+			<div class="flex flex-row w-full h-36 border-t-2
 			<%if(color == 0){color = 1; %>fondo-black<% }
 			else{color = 0; %>fondo-gray<% }%>
-			 borde-red my-1 pl-10">
+			 borde-red my-0 pl-10">
 				<div class="flex justify-center items-center">
-					<img src="<%=result.post[i].url_image%>" class="w-32 h-32">
+					<img src="<%=result.post[i].url_image%>" class="w-32 h-32 rounded">
 				</div>
 				<div class="flex flex-col h-full justify-around pl-4">
 					<div class="texto-white">
