--- a/views/footer.html
+++ b/views/footer.html
@@ -28,11 +28,15 @@
       </span>
       
     </div>
-    <div class=""> 
-      <span class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
-        Thunderbit Fiverr
+    <div class="flex flex-row">
+      <div>
+        <p class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
+        </p>
+        <p class="text-2xl my-3 mx-4 inline-flex items-center">Thunderbit Fiverr</p>
+      </div>
+      <div>
         <a href="https://es.fiverr.com/thunderbitcode?up_rollout=true"><img class="object-scale-down h-16 w-16" src="/images/fiverr.png"></a>
-      </span>
+      </div>
     </div>
   </footer>
   
