--- a/views/footer.html
+++ b/views/footer.html
@@ -11,12 +11,14 @@
   
   </head>
   
-  <footer class="w-full h-full p-10 mt-6 fondo-black shadow justify-between md:flex md:items-center ">
+  <footer class="w-full h-full p-10 mt-6 fondo-black shadow md:flex md:items-center ">
     <div class="w-1/2 h-2/3 texto-white flex flex-col justify-between">
-      <span class=" text-xl cursor-pointer">
-        <i class="fa-solid fa-book-open texto-red"></i>
-        Book Lovers
-      </span>
+      <div>
+        <span class="text-xl cursor-pointer" onclick="window.location.href='/home';">
+          <i class="fa-solid fa-book-open texto-red"></i>
+          Book Lovers
+        </span>
+      </div>
       <span class="text-sm ">All the books are owned by their respective authors and the comments shown are just examples</span>
       <span class="text-xl mt-3">
         Check our repository and social media!
@@ -28,14 +30,14 @@
       </span>
     </div>
 
-    <div class="flex flex-row">
+    <div class="flex flex-row rounded-md fondo-gray my-6 mx-4 pr-20 ">
       <div>
-        <p class="text-2xl my-3 mx-4 inline-flex items-center">We are open for work! 
+        <p class="text-2xl my-3 mx-14 ">We are open for work! 
         </p>
-        <p class="text-2xl my-3 mx-4 inline-flex items-center">Thunderbit Fiverr</p>
+        <p class="text-2xl my-3 mx-14">Thunderbit Fiverr</p>
       </div>
       <div>
-        <a href="https://es.fiverr.com/thunderbitcode?up_rollout=true"><img class="object-scale-down h-16 w-16" src="/images/fiverr.png"></a>
+        <a href="https://es.fiverr.com/thunderbitcode?up_rollout=true"><img class="h-16 w-16" src="/images/fiverr.png"></a>
       </div>
 
     </div>
