correcion de erroes y sugerencias

--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -64,7 +64,7 @@
 	</section>
 	<!--AGREGAR GENEROS-->
 	<div class="agregar" id="agregar">
-		<form  method="post" action="/newgen">
+		<form  method="post" action="/newGen">
 			<table border="1">
 				<tr><th colspan="2">agregar generos</th></tr>
 				<tr>
