--- a/views/footer.html
+++ b/views/footer.html
@@ -11,8 +11,8 @@
   
   </head>
   
-  <footer class="w-full h-full p-10 mt-6 fondo-black shadow md:flex md:items-center ">
-    <div class="w-1/2 h-2/3 texto-white flex flex-col justify-between">
+  <footer class="w-full h-full p-10 mt-6 fondo-black shadow md:flex">
+    <div class="md:w-1/2 md:h-2/3 texto-white flex flex-col justify-between">
       <div>
         <span class="text-xl cursor-pointer" onclick="window.location.href='/home';">
           <i class="fa-solid fa-book-open texto-red"></i>
@@ -30,16 +30,15 @@
       </span>
     </div>
 
-    <div class="flex flex-row rounded-md fondo-gray my-6 mx-4 pr-20 ">
+    <div class="flex flex-row rounded-md fondo-gray my-4 px-4 justify-evenly text-center md:w-1/2">
       <div>
-        <p class="text-2xl my-3 mx-14 ">We are open for work! 
+        <p class="text-2xl mt-4">We are open for work! 
         </p>
-        <p class="text-2xl my-3 mx-14">Thunderbit Fiverr</p>
+        <p class="text-2xl mb-4">Thunderbit Fiverr</p>
       </div>
       <div>
         <a href="https://es.fiverr.com/thunderbitcode?up_rollout=true"><img class="h-16 w-16" src="/images/fiverr.png"></a>
       </div>
-
     </div>
   </footer>
   
