--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,13 +25,15 @@
        <p class="text-2xl p-5"> Thanks again and have a great day!</p>
     </div>
     <div class="py-10 texto-white text-center flex justify-center">
-      <span class="text-2xl"> If you are interested in working with us, please check out our gigs on Fiverr!</span>
+      <span class="text-2xl mx-2"> If you are interested in working with us, please check out our gigs on Fiverr!</span>
     </div>
-    <div class="p-6 m-6 texto-white text-center flex justify-center">
-      <span class="my-3 mx-4 inline-flex items-center">
+    <div class="m-6 texto-white text-center flex justify-center">
+      <div class="items-center md:inline-flex">
         <a href="https://www.fiverr.com/thunderbitcode"><p class="hover-red duration-700 text-3xl pt-5 underline underline-offset-8"> Thunderbitcode</p></a>
-        <img class="object-scale-down h-32 w-32" src="/images/Thunderbitlogo.png" alt="logo">
-      </span>
+        <div class="">
+          <img class="object-scale-down h-32 w-32" src="/images/Thunderbitlogo.png" alt="logo">
+        </div>
+      </div>
     </div>
   </div>
   <%- include('./footer.html') %>
