--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -15,19 +15,19 @@
 
 	<%- include('./nav.ejs') %>
 
-	<div class="flex flex-row overflow-hidden">
+	<div class="flex flex-col items-center">
 		<%
-		numero = result.genre.length/4
-		for (var i = 0; i<numero; i++){ %>
-			<div>
-				<%for (var j = 0 ; j < result.genre.length; j++) { %>
+		var number = Math.floor(result.genre.length/4); 
+		if((result.genre.length%4)>0){number++}
+		for (var i = 0; i<number; i++){  %>
+			<div class="flex flex-row pl">
+				<%for (var j = 4*i ; j < result.genre.length-(4*(number-i)); j++) { %>
 				<div class="texto-white grow">
 					<a href="/showGen/<%=result.genre[j].id_genres%>/"><%=result.genre[j].name%></a>
 				</div>
-				<% }
+				<% } %>
 		</div>
-		} 
-		%>
+		<%}%>
 	</div>
 
 	<!-- borrar mas tarde , prueba de escypir valores de la base de datos aqui , esto no afecta-->
