--- a/views/about.ejs
+++ b/views/about.ejs
@@ -28,7 +28,7 @@
       <span class="text-2xl mx-2"> If you are interested in working with us, please check out our gigs on Fiverr!</span>
     </div>
     <div class="m-6 texto-white text-center flex justify-center">
-      <div class="items-center md:inline-flex">
+      <div class="items-center flex sm:flex-row md:flex-col">
         <a href="https://www.fiverr.com/thunderbitcode"><p class="hover-red duration-700 text-3xl pt-5 underline underline-offset-8"> Thunderbitcode</p></a>
         <div class="">
           <img class="object-scale-down h-32 w-32" src="/images/Thunderbitlogo.png" alt="logo">
