footer n about margins

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,10 +25,10 @@
        <p class="text-2xl p-5"> Thanks again and have a great day!</p>
     </div>
     <div class="py-10 texto-white text-center flex justify-center">
-      <span class="text-2xl mx-2"> If you are interested in working with us, please check out our gigs on Fiverr!</span>
+      <span class="text-2xl mx-5"> If you are interested in working with us, please check out our gigs on Fiverr!</span>
     </div>
     <div class="m-6 texto-white text-center flex justify-center">
-      <div class="items-center flex sm:flex-row md:flex-col">
+      <div class="items-center flex flex-col md:flex-row">
         <a href="https://www.fiverr.com/thunderbitcode"><p class="hover-red duration-700 text-3xl pt-5 underline underline-offset-8"> Thunderbitcode</p></a>
         <div class="">
           <img class="object-scale-down h-32 w-32" src="/images/Thunderbitlogo.png" alt="logo">
