--- a/views/footer.html
+++ b/views/footer.html
@@ -12,7 +12,7 @@
   </head>
   
   <footer class="w-full h-full p-10 mt-6 fondo-black shadow md:flex">
-    <div class="md:w-1/2 md:h-2/3 texto-white flex flex-col justify-between">
+    <div class="md:w-1/2 md:h-2/3 texto-white flex flex-col justify-between mr-7">
       <div>
         <span class="text-xl cursor-pointer" onclick="window.location.href='/home';">
           <i class="fa-solid fa-book-open texto-red"></i>
@@ -30,7 +30,7 @@
       </span>
     </div>
 
-    <div class="flex flex-row rounded-md fondo-gray my-4 px-4 justify-evenly text-center md:w-1/2">
+    <div class="flex flex-row rounded-md fondo-gray my-4 justify-evenly text-center md:w-1/2">
       <div>
         <p class="text-2xl mt-4">We are open for work! 
         </p>
