--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -17,7 +17,7 @@
 	<div class="flex justify-center">
 		<div class="flex flex-row flex-wrap my-4 w-4/5 text-center">
 			<%for (var i = 0; i<result.genre.length; i++){  %>
-					<div class="texto-white grow mx-4 my-2 fondo-red rounded pb-1">
+					<div class="texto-white mx-4 my-2 fondo-red rounded pb-1">
 						<b><a href="/showGen/<%=result.genre[i].id_genres%>/"><%=result.genre[i].name%></a></b>
 					</div>
 			<%}%>
