--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -86,7 +86,20 @@
 			</table>
 		</form>
 	</div>
-
+		<!--buscar genero-->
+	<div class="agregar" id="agregar">
+		<form  method="post" action="/search">
+			<table border="1">
+				<tr><th colspan="2">agregar generos</th></tr>
+				<tr>
+					<th>nombre del genero</th>
+					<th><input type="text" name="search" id="search"></th>
+				</tr>
+				<tr><th><input type="submit" name="buscar" value="buscar"></th></tr>
+				
+			</table>
+		</form>
+	</div>
 	
 	<%- include('./footer.html') %>
 
