--- a/views/footer.html
+++ b/views/footer.html
@@ -30,7 +30,7 @@
       </span>
     </div>
 
-    <div class="flex flex-row rounded-md fondo-gray my-4 justify-evenly text-center md:w-1/2">
+    <div class="flex flex-row rounded-md fondo-gray my-4 justify-evenly texto-white text-center md:w-1/2">
       <div>
         <p class="text-2xl mt-4">We are open for work! 
         </p>
