--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -17,7 +17,7 @@
 
 		<!--Funcion de busqueda-->
 		<div class="flex justify-end">
-			<form method="post" action="/search" class="flex flex-col texto-white my-4 mr-2 fondo-black rounded p-2">
+			<form method="post" action="/search" class="flex flex-col texto-white my-4 mr-2 p-2">
 				<div class="">
 					<p>Search by Title</p>
 				</div>
@@ -33,7 +33,7 @@
 		</div>
 
 	<div class="flex justify-center">
-		<div class="flex flex-row flex-wrap my-4 w-4/5 text-center">
+		<div class="flex flex-row flex-wrap my-4 w-4/5 text-center fondo-black rounded p-6">
 			<%for (var i = 0; i<result.genre.length; i++){  %>
 					<div class="texto-white mx-4 my-2 fondo-red rounded pb-1">
 						<b><a href="/showGen/<%=result.genre[i].id_genres%>/"><%=result.genre[i].name%></a></b>
@@ -46,38 +46,40 @@
 	<section class="flex flex-col"> 
 		<% var color = 0;
 		for (var i = 0 ; i < result.post.length; i++) { %>
-			<div class="flex flex-row w-full h-36 border-t-2
+			<div class="flex flex-row w-full border-t-2
 			<%if(color == 0){color = 1; %>fondo-black<% }
 			else{color = 0; %>fondo-gray<% }%>
 			 borde-red my-0 pl-10">
-				<div class="flex justify-center items-center">
-					<img src="<%=result.post[i].url_image%>" class="w-32 h-32 rounded">
+				<div class="justify-center items-center flex">
+					<img src="<%=result.post[i].url_image%>" class="rounded  w-32 h-32">
 				</div>
-				<div class="flex flex-col h-full justify-around pl-4">
-					<div class="texto-white">
-						<b>Work: </b><a href="/post/<%=result.post[i].id_posts%>/" class="hover-red duration-1000 p-0"><%=result.post[i].title%></a>
+				<div class="flex flex-col md:flex-row">
+					<div class="flex flex-col h-full justify-around pl-4 mb-2">
+						<div class="texto-white">
+							<b>Work: </b><a href="/post/<%=result.post[i].id_posts%>/" class="hover-red duration-1000 p-0"><%=result.post[i].title%></a>
+						</div>
+						<div class="texto-white">
+							<p><b>Review Author: </b><%=result.post[i].username%></p>
+						</div>
+						<div class="texto-white">
+							<p><b>Creation Date: </b><%=result.post[i].creation_date%></p>
+						</div>
 					</div>
-					<div class="texto-white">
-						<p><b>Review Author: </b><%=result.post[i].username%></p>
+					<div class="texto-white flex flex-col h-full justify-around pl-4 mb-2">
+						<div>
+							<p><b>Number of Words: </b><%=result.post[i].number_words%></p>	
+						</div>
+						<div>
+							<p><b>Replies: </b><%= result.post[i].replies %></p>
+						</div>
+						<div>
+							<p><b>Last Activity: </b><%= result.post[i].activity %></p>
+						</div>
 					</div>
-					<div class="texto-white">
-						<p><b>Creation Date: </b><%=result.post[i].creation_date%></p>
-					</div>
-				</div>
-				<div class="texto-white flex flex-col h-full justify-around pl-4">
-					<div>
-						<p><b>Number of Words: </b><%=result.post[i].number_words%></p>	
-					</div>
-					<div>
-						<p><b>Replies: </b><%= result.post[i].replies %></p>
-					</div>
-					<div>
-						<p><b>Last Activity: </b><%= result.post[i].activity %></p>
-					</div>
-				</div>
-				<div class="texto-white flex flex-col w-1/3 h-full justify-around pl-4">
-					<div class="">
-						<p><b>Preview: </b><i>"..<%=result.post[i].content_post%>.."</i></p>
+					<div class="texto-white flex flex-col w-full md:w-1/3 h-full justify-around pl-4 mb-2">
+						<div class="">
+							<p><b>Preview: </b><i>"..<%=result.post[i].content_post%>.."</i></p>
+						</div>
 					</div>
 				</div>
 			</div>		
