--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -22,7 +22,7 @@
 		<div class="flex justify-end">
 			<form method="post" action="/search" class="flex flex-col texto-white my-4 mr-2 fondo-black rounded p-2">
 				<div class="">
-					<p>Search by Title</p>
+					<p>Search by Title or Content</p>
 				</div>
 				<div class="flex flex-row mt-1">
 					<div class="mr-2">
