--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -20,7 +20,7 @@
 		</div>
 		<!--Funcion de busqueda-->
 		<div class="flex justify-end">
-			<form method="post" action="/search" class="flex flex-col texto-white my-4 mr-2 fondo-black rounded p-2">
+			<form method="post" action="/search" class="flex flex-col texto-white my-4 mr-2 rounded p-2">
 				<div class="">
 					<p>Search by Title or Content</p>
 				</div>
