--- a/views/genres.ejs
+++ b/views/genres.ejs
@@ -14,8 +14,9 @@
 <body>
 
 	<%- include('./nav.ejs') %>
-	<div>
-		<div>
+	<div class="flex justify-end flex-row">
+		<div class="text-4xl texto-red my-4 py-6 px-4">
+			<i class="fa-solid fa-square-plus"></i>
 
 		</div>
 		<!--Funcion de busqueda-->
@@ -26,7 +27,7 @@
 				</div>
 				<div class="flex flex-row mt-1">
 					<div class="mr-2">
-						<input type="text" name="search" id="search" class="rounded fondo-white texto-black">
+						<input type="text" name="search" id="search" class="rounded fondo-white texto-black pl-2">
 					</div>
 					<div>
 						<input type="submit" name="buscar" value="Search" class="cursor-pointer rounded fondo-red px-1">
