--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,11 +14,8 @@
 <body>
   <%- include('./nav.ejs') %>
   <div class="container-body relative z-10 flex flex-col">
-    <div class="flex flex-col w-full justify-center items-center">
-      <p class="texto-white">Bienvenida</p>
-    </div>
-    <div>
-      Imagen de bienvenida o algo asi?
+    <div class="">
+      <img class="" src="/images/book-home.png">
     </div>
     <div class="fondo-black flex flex-col w-full justify-center items-center my-2">
       <p class="texto-white">Introduccion al sitio titulo</p>
