--- a/views/post.ejs
+++ b/views/post.ejs
@@ -38,7 +38,12 @@
 					<p class="ml-3 rounded-t fondo-white texto-gray w-fit p-1"><b><i>Want to contribute to this Post?</i></b></p>
 				</div>
 				<div class="px-3 flex flex-col">
-                    <textarea name="content_post" id="content_post" maxlength="2000" class="resize-none rounded-x rounded-b rounded-r borde-white border-2 w-full p-1 texto-white fondo-gray"></textarea>
+                    <textarea name="answer" id="answer" maxlength="2000" class="resize-none rounded-x rounded-b rounded-r borde-white border-2 w-full p-1 texto-white fondo-gray"></textarea>
+
+					<!--Campos ocultos-->
+					<input type="hidden" name="id_post" id="id_post" value="<%=result.post.id_posts%>">
+					<input type="hidden" name="id_user" id="id_user" value="<%=result.session.id_users%>">
+
 					<div class="flex flex-row items-center justify-between mt-1">
 						<input type="submit" name="Enviar" value="Answer" class="cursor-pointer rounded fondo-red px-2 w-fit">
 						<p class="texto-white text-end"><i>0/2000</i></p>
